test/pass/enums_and_variants/enum_class_nest.lly
enum Option[A] {
	Some(A)
	None
}

# This test ensures that if a function says that bare variants cannot resolve
# a generic type until they're first put into an enum with whatever info
# they have at the time.
var t: Option[Option[integer]] = Some(Some(10))
