test/fail/enums_and_variants/wrong_arg_count_vararg_none.lly
#[
SyntaxError: Wrong number of arguments to Some (none for 0+).
    from wrong_arg_count_vararg_none.lly:16
]#

# This is an artificial restriction. The reason that I've placed it is for
# consistency. You can't invoke a function without () even if it takes no
# arguments. The same should hold for variants.

enum Option[A]
{
    Some(A...)
    None
}

var v = Some
